# tciopy

./: .gitignore  pyproject.toml
data/: 20240823060000-240h-oper-tf.bufr  complete_cxml.xml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_templates/autosummary/: class.rst  module.rst
io/: abdeck.py
sorc/adeck_parser/: Cargo.toml  main.py
sorc/adeck_parser/src/: adeck_parser.rs  lib.rs
src/tciopy/: __init__.py  converters.py  utils.py
src/tciopy/atcf/: __init__.py  abdeck.py  decks.py  edeck.py  fdeck.py
src/tciopy/bufr/: __init__.py  reader.py
src/tciopy/cxml/: reader.py
tests/: test_atcf.py  test_columns.py  test_utils.py
