[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "tciopy"
description = "IO utilities for Tropical Cyclone Track data formats"
authors = [
    {name = "Alan Brammer", email = "a1brammer@gmail.com"},
]
dynamic = ["version"]
dependencies = [
    'polars',
    'pandas',
]

[options]
python_requires = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["tciopy*"]  # package names should match these glob patterns (["*"] by default)

[tool.black]
line-length = 100

[tool.setuptools_scm]
# Needs to be here even though it's empty